# scdt-server

./: README.md  ec2.nix  flake.nix  pg_down.sh  pg_up.sh
challd/: Cargo.toml
challd/src/: address_manager.rs  container.rs  crypto_stuff.rs  demo.rs  dummy_interface.rs  interface.rs  main.rs  ports.rs  wg_config.rs
ctf_archive/: .env  Cargo.toml
ctf_archive/migrations/2024-09-21-213337_ctfs/: down.sql  up.sql
ctf_archive/migrations/2024-09-22-170758_categories/: up.sql
ctf_archive/migrations/2024-09-22-201237_challenges/: down.sql  up.sql
ctf_archive/migrations/2024-11-10-003821_connection_instructions/: down.sql  up.sql
ctf_archive/migrations/2025-01-31-173340_null_challenge_files/: down.sql  up.sql
ctf_archive/migrations/2025-02-04-175356_remove_has_archive/: down.sql  up.sql
ctf_archive/migrations/2025-02-19-001411_goodbye_xss/: down.sql  up.sql
ctf_archive/src/: auth.rs  binary.rs  categories.rs  challd.rs  challenges.rs  codes.rs  ctfs.rs  date.rs  db.rs  guest.rs  jwt.rs  main.rs  models.rs  schema.rs  security_addon.rs  state.rs
ctf_archive/static/: index.html
